This file documents the revision history for the Open Monitoring Distribution (Labs Edition)

next:
          - Mod-Gearman:
            - switch to go worker
            - update mod-gearman-worker-go to 1.0.2

2.80     Oct 29 2018
          - OMD:
            - add SELinux support for centos/rhel and fedora
            - add build support for Ubuntu 18.04 Bionic
            - add build support for Fedora 28
            - add WEB_ALIAS hook to define an url alias
            - add WEB_REDIRECT hook to enable redirect from / to /sitename
            - support uninstalling versions, even if sites use this version
              - site can be updated later by running omd update of the new version
            - add --no-tmpfs option to "omd create"
            - add "omd cleanup" command to remove unused omd versions
          - Naemon update to 1.0.8
          - InfluxDB: update to 1.6.4
            - add INFLUXDB_MODE hook to support ssl
          - Go update to 1.9.7
          - Go update to 1.10.4
          - Grafana update to 5.3.2
            - set default fill to none for influxdb datasource
            - new datasource for PNP
            - new datasource for Thruks REST API
          - Prometheus update to 2.4.3
          - Prometheus Pushgateway update to 0.5.2
          - Prometheus node_exporter update to 0.16.0
          - Prometheus Alertmanager update to 0.15.2
          - Icinga2 update to 2.9.2
            - add ido features (experimental)
            - add ido omd config hook (experimental)
          - Thruk:
            - update to 2.24
            - disable shinken features plugin in default installation
          - LMD: Update 1.3.5
          - Mod-Gearman: Update 3.0.6
            - add mod-gearman-worker-go
          - Monitoring-Plugins
            - add check_curl

2.70     Mar 14 2018
          - OMD:
            - add LIVESTATUS_TCP_ONLY_FROM hook
            - add omd -p switch for parallel restart/reload/stop/start