@@ -1,2 +1,2 @@
 # <?php exit()?>
-omdadmin:M29dfyFjgy5iA:OMD Admin:admin@example.org:admin,user
+omdadmin::OMD Admin:admin@localhost:admin,user
