@@ -1,0 +1,24 @@
+#!/bin/bash
+
+if [ "x$1" = "x-h" ]; then
+  echo "usage: $0 [<new admin password>]" >&2
+  exit 1;
+fi
+
+PW="$1"
+if [ "x$PW" = "x" ]; then
+  read -r -p "enter new password: " -s PW
+  echo
+fi
+
+if [ "x$PW" = "x" ]; then
+  echo "error: password cannot be empty" >&2
+  exit 1;
+fi
+
+# update apache
+HTPASSWD=htpasswd
+if type htpasswd2 >/dev/null 2>&1; then
+    HTPASSWD=htpasswd2
+fi
+$HTPASSWD -b ~/etc/htpasswd omdadmin "$PW"
